remove guava usage in project code